# python-package-template

./: README.md  pyproject.toml  update_reqs.py
.github/: dependabot.yml
